--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: binance-bot
     build:
       context: ./
-      target: dev-stage
-      # target: production-stage
+      # target: dev-stage
+      target: production-stage
     networks:
       - internal
     volumes:
@@ -17,8 +17,8 @@ services:
       - .env
     restart: unless-stopped
     environment:
-      - BINANCE_MODE=test
-      # - BINANCE_MODE=live
+      # - BINANCE_MODE=test
+      - BINANCE_MODE=live
       - BINANCE_JOBS_ALIVE_ENABLED=true
       - BINANCE_JOBS_TRAILING_TRADE_ENABLED=true
       - BINANCE_JOBS_TRAILING_TRADE_SYMBOLS=["BNBUSDT", "BTCUSDT", "ETHUSDT",
@@ -35,7 +35,7 @@ services:
       - REDIS_PORT=6379
       - REDIS_PASSWORD=
     ports:
-      - 8080:80
+      - 80:80
     logging:
       driver: 'json-file'
       options:
@@ -43,14 +43,14 @@ services:
 
   binance-redis:
     container_name: binance-redis
-    image: redis:6.0
+    image: redis:latest
     sysctls:
       net.core.somaxconn: 1024
     restart: unless-stopped
     networks:
       - internal
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
     volumes:
       - redis_data:/data
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
@@ -58,23 +58,25 @@ services:
 
   binance-mongo:
     container_name: binance-mongo
-    image: mongo:3.2.20-jessie
+    image: mongo:latest
     restart: unless-stopped
     networks:
       - internal
     volumes:
       - mongo_data:/data/db
 
-  binance-mongo-express:
-    container_name: binance-mongo-express
-    image: mongo-express:0.54
-    restart: unless-stopped
-    networks:
-      - internal
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_SERVER: binance-mongo
+  # binance-mongo-express:
+  #   container_name: binance-mongo-express
+  #   image: mongo-express:latest
+  #   restart: unless-stopped
+  #   networks:
+  #     - internal
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     - ME_CONFIG_MONGODB_SERVER=binance-mongo
+  #     # - ME_CONFIG_BASICAUTH_USERNAME=
+  #     # - ME_CONFIG_BASICAUTH_PASSWORD=
 
 networks:
   internal:
